# fusio-sdk-python

./: LICENSE  README.md  pyproject.toml  requirements.txt  sdkgen.json
.github/workflows/: sdkgen.yml
src/: backend_action.py  backend_action_config.py  backend_action_create.py  backend_action_execute_response_body.py  backend_action_index.py  backend_action_index_entry.py  backend_action_tag.py  backend_action_update.py  backend_app.py  backend_app_collection.py  backend_audit.py  backend_audit_collection.py  backend_audit_tag.py  backend_category_collection.py  backend_category_create.py  backend_category_tag.py  backend_config.py  backend_config_collection.py  backend_config_update.py  backend_connection.py  backend_connection_collection.py  backend_connection_config.py  backend_connection_create.py  backend_connection_index.py  backend_connection_introspection_entities.py  backend_connection_tag.py  backend_cronjob_collection.py  backend_cronjob_error.py  backend_cronjob_tag.py  backend_cronjob_update.py  backend_dashboard_app.py  backend_dashboard_apps.py  backend_dashboard_request.py  backend_dashboard_requests.py  backend_dashboard_transaction.py  backend_event.py  backend_event_collection.py  backend_event_subscription_create.py  backend_event_subscription_update.py  backend_event_update.py  (+92 more)
src/sdk/: __init__.py  agent_input.py  agent_item.py  agent_item_binary.py  agent_item_choice.py  agent_item_object.py  agent_item_text.py  agent_item_tool_call.py  agent_item_tool_call_function.py  agent_output.py  authorization_tag.py  backend_account_change_password.py  (+413 more)
