[project]
name = "fusio-sdk"
version = "0.0.0"
authors = [
  { name="Christoph Kappestein", email="christoph.kappestein@gmail.com" },
]
description = "SDK to talk to the Fusio REST API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "sdkgen-client >= 2.0.1",
]

[project.urls]
Homepage = "https://github.com/apioo/fusio-sdk-python"
Issues = "https://github.com/apioo/fusio-sdk-sdkgen-python/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sdk"]
package-dir = {"" = "src"}
